close #227 minor fixes on mobile employee page

--- a/_sass/_media-ques.scss
+++ b/_sass/_media-ques.scss
@@ -3,17 +3,21 @@
   .page {
     .row {
       padding: 0;
-      width: 95% !important;
+      width: 90%;
       margin: 0 auto;
     }
 
     .introductionText {
-      width: 95% !important;
+      width: inherit;
       margin: 0 auto;
-      padding: 75px 0;
+      padding: 50px 0;
 
       h1 {
-        font-size: 20px;
+        font-size: 18px;
+        font-weight: 600;
+      }
+      p {
+        font-size: 16px;
       }
     }
   }
@@ -21,7 +25,7 @@
   .employees {
     .img-empl {
       margin: 20px auto;
-      width: 95% !important;
+      width: 90%;
     }
 
     .end-empl {
@@ -34,10 +38,6 @@
 
       h3 {
         margin-top: 50px;
-      }
-
-      iframe {
-        width: 100% !important;
       }
     }
   }
@@ -64,7 +64,7 @@
 
     .col-xs-6:nth-child(2),
     .col-xs-6:nth-child(4) {
-      padding-left: 25px;
+      padding-left: 20px;
     }
 
     p,
@@ -172,6 +172,8 @@
     }
     .information-card-text {
       width: 100%;
+      padding: 25px;
+      background: red;
       h1 {
         padding: 10px 0;
       }
