--- a/_sass/media-ques/_mq-page.scss
+++ b/_sass/media-ques/_mq-page.scss
@@ -23,14 +23,14 @@
     width: 100% !important;
 
     span {
-      width: 100%;
+      width: 90%;
     }
 
     h1 {
-      font-size: 25px;
+      font-size: 30px;
       line-height: 35px;
       max-width: 740;
-      padding-left: 10px;
+      font-weight: 600;
     }
 
   }
